# uiuifree-dictionary

./: .gitignore  Cargo.toml
src/: lib.rs  resource.rs
tests/: test.rs
