[package]
name = "uiuifree-dictionary"
version = "0.1.3"
edition = "2021"


authors = ["uiuifree"]
description = "My MecabDic Util"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_derive = "~1"

mecab = { version = "0.1.5", optional = true }
unicode-jp = "0.4"

[features]
default = []
dic-mecab = ["mecab"]